exports[`test Closes menu when document is clicked 1`] = `
<Dropdown
  items={
    Array [
      Object {
        "active": false,
        "icon": <img
          alt="Austrian flag"
          src="austrianflag.jpg" />,
        "link": <a
          alt="hi"
          href="/at">
          Austria
    </a>,
        "value": "Austria",
      },
      Object {
        "active": true,
        "icon": <img
          alt="German flag"
          src="germanflag.jpg" />,
        "link": <a
          href="/de">
          German
    </a>,
        "value": "German",
      },
    ]
  }
  position="top"
  shade="light">
  <div
    className="container top">
    <button
      className="selection clearfix light"
      onClick={[Function]}>
      German
      <span
        className="pullRight">
        <img
          alt="German flag"
          src="germanflag.jpg" />
      </span>
    </button>
    <ul
      className="menu ">
      <li
        className="item clearfix"
        onClick={[Function]}>
        <a
          alt="hi"
          href="/at">
          <span>
            <span
              className="pullLeft">
              Austria
            </span>
            <span
              className="pullRight">
              <img
                alt="Austrian flag"
                src="austrianflag.jpg" />
            </span>
          </span>
        </a>
      </li>
      <li
        className="item clearfix"
        onClick={[Function]}>
        <a
          href="/de">
          <span>
            <span
              className="pullLeft">
              German
            </span>
            <span
              className="pullRight">
              <img
                alt="German flag"
                src="germanflag.jpg" />
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</Dropdown>
`;

exports[`test Renders DropDown without crashing 1`] = `
<div
  className="container top">
  <button
    className="selection clearfix light"
    onClick={[Function]}>
    German
    <span
      className="pullRight">
      <img
        alt="German flag"
        src="germanflag.jpg" />
    </span>
  </button>
  <ul
    className="menu ">
    <li
      className="item clearfix"
      onClick={[Function]}>
      <a
        alt="hi"
        href="/at">
        <span>
          <span
            className="pullLeft">
            Austria
          </span>
          <span
            className="pullRight">
            <img
              alt="Austrian flag"
              src="austrianflag.jpg" />
          </span>
        </span>
      </a>
    </li>
    <li
      className="item clearfix"
      onClick={[Function]}>
      <a
        href="/de">
        <span>
          <span
            className="pullLeft">
            German
          </span>
          <span
            className="pullRight">
            <img
              alt="German flag"
              src="germanflag.jpg" />
          </span>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`test Renders correct default selection 1`] = `
<div
  className="container top">
  <button
    className="selection clearfix light"
    onClick={[Function]}>
    Austria
    <span
      className="pullRight">
      <img
        alt="Austrian flag"
        src="austrianflag.jpg" />
    </span>
  </button>
  <ul
    className="menu ">
    <li
      className="item clearfix"
      onClick={[Function]}>
      <a
        alt="hi"
        href="/at">
        <span>
          <span
            className="pullLeft">
            Austria
          </span>
          <span
            className="pullRight">
            <img
              alt="Austrian flag"
              src="austrianflag.jpg" />
          </span>
        </span>
      </a>
    </li>
    <li
      className="item clearfix"
      onClick={[Function]}>
      <a
        href="/de">
        <span>
          <span
            className="pullLeft">
            German
          </span>
          <span
            className="pullRight">
            <img
              alt="German flag"
              src="germanflag.jpg" />
          </span>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`test Renders correctly when no icon is provided 1`] = `
<div
  className="container top">
  <button
    className="selection clearfix light"
    onClick={[Function]}>
    Austria

  </button>
  <ul
    className="menu ">
    <li
      className="item clearfix"
      onClick={[Function]}>
      <span>
        <span
          className="pullLeft">
          Austria
        </span>

      </span>
    </li>
    <li
      className="item clearfix"
      onClick={[Function]}>
      <span>
        <span
          className="pullLeft">
          German
        </span>

      </span>
    </li>
  </ul>
</div>
`;

exports[`test Renders correctly when no link is provided 1`] = `
<div
  className="container top">
  <button
    className="selection clearfix light"
    onClick={[Function]}>
    Austria
    <span
      className="pullRight">
      <img
        alt="Austrian flag"
        src="austrianflag.jpg" />
    </span>
  </button>
  <ul
    className="menu ">
    <li
      className="item clearfix"
      onClick={[Function]}>
      <span>
        <span
          className="pullLeft">
          Austria
        </span>
        <span
          className="pullRight">
          <img
            alt="Austrian flag"
            src="austrianflag.jpg" />
        </span>
      </span>
    </li>
    <li
      className="item clearfix"
      onClick={[Function]}>
      <span>
        <span
          className="pullLeft">
          German
        </span>
        <span
          className="pullRight">
          <img
            alt="German flag"
            src="germanflag.jpg" />
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`test Renders menu when button is clicked 1`] = `
<Dropdown
  items={
    Array [
      Object {
        "active": false,
        "icon": <img
          alt="Austrian flag"
          src="austrianflag.jpg" />,
        "link": <a
          alt="hi"
          href="/at">
          Austria
    </a>,
        "value": "Austria",
      },
      Object {
        "active": true,
        "icon": <img
          alt="German flag"
          src="germanflag.jpg" />,
        "link": <a
          href="/de">
          German
    </a>,
        "value": "German",
      },
    ]
  }
  position="top"
  shade="light">
  <div
    className="container top">
    <button
      className="selection clearfix light"
      onClick={[Function]}>
      German
      <span
        className="pullRight">
        <img
          alt="German flag"
          src="germanflag.jpg" />
      </span>
    </button>
    <ul
      className="menu open">
      <li
        className="item clearfix"
        onClick={[Function]}>
        <a
          alt="hi"
          href="/at">
          <span>
            <span
              className="pullLeft">
              Austria
            </span>
            <span
              className="pullRight">
              <img
                alt="Austrian flag"
                src="austrianflag.jpg" />
            </span>
          </span>
        </a>
      </li>
      <li
        className="item clearfix"
        onClick={[Function]}>
        <a
          href="/de">
          <span>
            <span
              className="pullLeft">
              German
            </span>
            <span
              className="pullRight">
              <img
                alt="German flag"
                src="germanflag.jpg" />
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</Dropdown>
`;

exports[`test Updatess selection on item click 1`] = `
<Dropdown
  items={
    Array [
      Object {
        "active": false,
        "icon": <img
          alt="Austrian flag"
          src="austrianflag.jpg" />,
        "link": <a
          alt="hi"
          href="/at">
          Austria
    </a>,
        "value": "Austria",
      },
      Object {
        "active": true,
        "icon": <img
          alt="German flag"
          src="germanflag.jpg" />,
        "link": <a
          href="/de">
          German
    </a>,
        "value": "German",
      },
    ]
  }
  position="top"
  shade="light">
  <div
    className="container top">
    <button
      className="selection clearfix light"
      onClick={[Function]}>
      German
      <span
        className="pullRight">
        <img
          alt="German flag"
          src="germanflag.jpg" />
      </span>
    </button>
    <ul
      className="menu ">
      <li
        className="item clearfix"
        onClick={[Function]}>
        <a
          alt="hi"
          href="/at">
          <span>
            <span
              className="pullLeft">
              Austria
            </span>
            <span
              className="pullRight">
              <img
                alt="Austrian flag"
                src="austrianflag.jpg" />
            </span>
          </span>
        </a>
      </li>
      <li
        className="item clearfix"
        onClick={[Function]}>
        <a
          href="/de">
          <span>
            <span
              className="pullLeft">
              German
            </span>
            <span
              className="pullRight">
              <img
                alt="German flag"
                src="germanflag.jpg" />
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</Dropdown>
`;
